<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings used for app miscellaneous -->
    <string name="app_name">SporTrack</string>
    <string name="logo">Logo</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <!-- Strings used for login and register fragments -->
    <string name="login_label">Login</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="register_label_confirm_password">Confirm password</string>
    <string name="register_label">Register</string>
    <string name="authentication_failed">Authentication failed.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="homepage">Homepage</string>
    <string name="schedule">Schedule</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="timer">Timer</string>
    <!-- Strings used for muscles -->
    <string name="abdominals">abdominals</string>
    <string name="biceps">biceps</string>
    <string name="chest">chest</string>
    <string name="lats">lats</string>
    <string name="middle_back">middle back</string>
    <string name="lower_back">lower back</string>
    <string name="triceps">triceps</string>
    <string name="quadriceps">quadriceps</string>
    <string name="hamstrings">hamstrings</string>
    <string name="glutes">glutes</string>
    <!-- Strings used for exercises  -->
    <string name="difficulty">Difficulty: %1$s</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="saved_workout_exercise">The exercise has been added</string>
    <string name="exercise_type">Type: %1$s</string>
    <string name="exercise_muscle">Muscle: %1$s</string>
    <string name="exercise_tool">Tool: %1$s</string>
    <string name="exercise_difficulty">Difficulty: %1$s</string>
    <string name="instructions">Instructions</string>
    <!-- Strings used for schedule -->
    <string name="new_schedule">Add new schedule</string>
    <string name="schedule_name">Schedule name</string>
    <string name="series">Series: %1$d</string>
    <string name="repetitions">Reps: %1$d</string>
    <string name="series_placeholder">series</string>
    <string name="reps_placeholder">reps</string>
    <string name="no_exercises">NO EXERCISES</string>
    <string name="no_schedules">NO SCHEDULES</string>
    <!-- Strings used for settings -->
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Logout</string>
    <string name="setItalianLanguage">Italian language</string>
    <string name="reset">Erase all your data</string>
    <string name="confirm_reset">Confirm reset</string>
    <string name="confirm_reset_message">Are you sure you want to reset your data? This action cannot be undone.</string>
    <string name="data_reset_successfully">Data reset successfully</string>

    <!-- Strings used for errors -->
    <string name="invalid_email">Invalid email.</string>
    <string name="invalid_password">Password must be at least %1$d characters long.</string>
    <string name="invalid_confirm_password">Passwords don\'t match.</string>
    <string name="unexpected_error">Unexpected error: %1$s</string>
    <string name="invalid_input">Inserted values not valid.</string>
    <string name="loading_error_check_internet">Loading error, check your network and try again</string>
    <string name="user_not_logged">User not logged</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="pause">Pause</string>
    <string name="skipExercise">Skip Exercise</string>
    <string name="nextSeries">Next Series</string>
    <string name="further_details">Further details:</string>
    <string name="series_left">Remaining Sets:</string>
    <string name="of">of</string>
    <string name="rep_left">Reps</string>
    <string name="workout_end">Workout finished in</string>
    <string name="banner" translatable="false">Banner</string>
    <string name="play">Play</string>
    <string name="exercise_activity_status" translatable="false">exercise_activity_status</string>
    <string name="info_icon" translatable="false">info_icon</string>
    <string name="title_sport" translatable="false">SPORT</string>
    <string name="title_track" translatable="false">TRACK</string>
    <string name="activity_map">Activity Heatmap</string>
    <string name="most_trained_muscle">Most trained muscle</string>
    <string name="motivation_homapge">Keep going!</string>
    <string name="top_day">Best day</string>
    <string name="heatmap_first_description">Complete your first workout to see the heatmap and other stats!</string>
    <string name="end_pause_before">Finish your pause first!</string>
    <string name="start_timer_before">Start the timer before!</string>
    <string name="exercise_done_toast">Exercises done:</string>
    <string name="password_changed">Password changed</string>
</resources>