<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.SettingsFragment"
        >


        <TextView
            android:id="@+id/schedule_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/darkcollegefont"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textColor="@color/md_theme_onBackground"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/languageSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:checked="false"
            android:text="@string/setItalianLanguage"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schedule_headline" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/darkModeSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:checked="false"
            android:text="@string/dark_mode"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageSwitch" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_password_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="password"
            android:hint="@string/login_label_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/darkModeSwitch">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/changePasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="597dp">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_password_label" />

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/dummyView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSave" />

        <View
            android:id="@+id/dummyView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/md_theme_error"
            android:text="@string/logout"
            android:textColor="@color/md_theme_onError"
            app:layout_constraintBottom_toTopOf="@id/resetButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space"
            app:layout_constraintVertical_bias="1" />

        <Button
            android:id="@+id/resetButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reset"
            android:textColor="@color/md_theme_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
