<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.LoginFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.LoginFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_name_textfield_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/login_label_email"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login_name_textfield"
                        app:layout_constraintVertical_bias="0.192"
                        tools:layout_editor_absoluteX="5dp">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_label_password_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/login_label_password"
                    android:autofillHints="password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline2"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/login_name_textfield_layout"
                    app:layout_constraintVertical_bias="0.0">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:inputType="textPassword"
                        app:endIconMode="password_toggle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login_password_textfield"
                        app:layout_constraintVertical_bias="0.192"
                        tools:layout_editor_absoluteX="5dp">

                    </com.google.android.material.textfield.TextInputEditText>


                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="40dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="40dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/darkcollegefont"
                    android:text="@string/login_label"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/login_label"
                    app:layout_constraintBottom_toTopOf="@+id/go_to_register_button"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/login_label_password_layout" />

                <Button
                    android:id="@+id/go_to_register_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:text="@string/register_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/login_with_google"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/go_to_register_button"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>